--- a/Clock/index.html
+++ b/Clock/index.html
@@ -1,14 +1,14 @@
 <html>
 
   <head>
-    <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='stylesheet' type='text/css' href='style.css?v8'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <title>12:00 AM</title>
     <link rel='shortcut icon' href='images/sun.png' id="shortcut">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
-  <body>
+  <body class="noscroll">
     <div class="center">
       <div class="clock">
         <div class="time" id="js-time"></div>
@@ -21,7 +21,7 @@
     <div class="sun"></div>
     <div class="hills"></div>
 
-    <script src="clock.js"></script>
+    <script src="clock.js?v2"></script>
   </body>
 
 </html>
