Add iOS compatibility.

--- a/Clock/index.html
+++ b/Clock/index.html
@@ -21,7 +21,7 @@
     <div class="sun"></div>
     <div class="hills"></div>
 
-    <script src="clock.js?v13"></script>
+    <script src="./clock.js?v20" type="text/javascript"></script>
   </body>
 
 </html>
