--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Carousel</title>
     <link rel='stylesheet' type='text/css' href='style.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
