--- a/PNG-Reader/index.html
+++ b/PNG-Reader/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <!-- TODO: Put content here! -->
+    <script src="scripts/libs/Uint1Array.js"></script>
     <script src="scripts/data-view-reader.js"></script>
     <script src="scripts/chunks/IHDR.js"></script>
     <script src="scripts/chunks/tEXt.js"></script>
